move files around, start website backend
- python api for image operations good (the root folder's pipfile is for this)
- move discord bot from root directory to a subdirectory
- move some files into gamedata folder
- more cleanup of the bot: __init__.py, image_setup.py
- add a script that pre-processes images from aceship repo, to save on disk space (about half of default) and ram usage (about 40% of default)

--- a/discord-bot/Pipfile
+++ b/discord-bot/Pipfile
@@ -8,10 +8,9 @@ mypy = "*"
 flake8 = "*"
 
 [packages]
-python-dotenv = "*"
 pillow = "*"
-flask = "*"
-gunicorn = "*"
+"discord.py" = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
