--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "dependencies": {
     "connect-redis": "^5.0.0",
+    "debug": "^4.1.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/connect-redis": "0.0.14",
+    "@types/debug": "^4.1.5",
     "@types/dotenv-safe": "^8.1.1",
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
