--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "image guessing game",
   "main": "index.ts",
   "dependencies": {
-    "connect-redis": "^5.0.0",
+    "connect-redis": "^5.2.0",
     "debug": "^4.1.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "ioredis": "^4.17.3",
+    "express-session": "^1.17.2",
+    "ioredis": "^4.28.2",
     "ws": "^7.3.1"
   },
   "optionalDependencies": {
@@ -17,12 +17,12 @@
     "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
-    "@types/connect-redis": "0.0.14",
+    "@types/connect-redis": "^0.0.18",
     "@types/debug": "^4.1.5",
     "@types/dotenv-safe": "^8.1.1",
     "@types/express": "^4.17.7",
-    "@types/express-session": "^1.17.0",
-    "@types/ioredis": "^4.17.3",
+    "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.5",
     "@types/node": "^14.6.0",
     "@types/ws": "^7.2.6",
     "tslint": "^6.1.3",
