--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "ioredis": "^4.28.2",
+    "node-fetch": "^2.6.6",
     "ws": "^7.3.1"
   },
   "optionalDependencies": {
@@ -24,13 +25,15 @@
     "@types/express-session": "^1.17.4",
     "@types/ioredis": "^4.28.5",
     "@types/node": "^14.6.0",
+    "@types/node-fetch": "^2.5.12",
     "@types/ws": "^7.2.6",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsc && node api/web/dist/index.js"
+    "start": "npx tsc && node api/web/dist/index.js",
+    "image": "pipenv run gunicorn -w 1 -b localhost:5000 api.image.main:app"
   },
   "repository": {
     "type": "git",
